teamcity/k8s/deployment_teamcity.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tc-server
  namespace: teamcity
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      securityContext:
        fsGroup: 1234
      containers:
      - name: server
        image: gcr.io/jenkins-continuous-deployment/tc-server:2017.1.5
        ports:
        - containerPort: 8111
        readinessProbe:
          httpGet:
            path: /mnt
            port: 8111
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        volumeMounts:
        - mountPath: /data/teamcity_server/datadir
          name: teamcity-data
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
      volumes:
      - name: teamcity-data
        gcePersistentDisk:
          pdName: teamcity-data
          fsType: ext4
---
# Create a deployment for the agent image, but let Teamcity scale it
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tc-agent
  namespace: teamcity
spec:
  replicas: 0
  template:
    metadata:
      labels:
        app: agent
    spec:
      containers:
      - name: agent
        image: gcr.io/jenkins-continuous-deployment/tc-agent:2017.1.5
        volumeMounts:
        - mountPath: /usr/bin/docker
          name: docker-bin
        - mountPath: /var/run/docker.sock
          name: docker-sock
      volumes:
      - name: docker-bin
        hostPath:
          path: /usr/bin/docker
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
