teamcity/k8s/ingress_teamcity.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: teamcity-ingress
  namespace: teamcity
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: tls
  backend:
    serviceName: teamcity
    servicePort: 8111
